Build missing navigation and header image

--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,23 @@
 // Navigation code here
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    background-color: gainsboro;
+
+    h1 {
+        font-size: 3.5rem;
+        padding: 10px 10px;
+    }
+    .navigation {
+        padding: 10px;
+    }
+    .navigation a {
+        text-decoration: none;
+        padding: 15px;
+        color: black;
+        text-align: center;
+        font-size: 2rem;
+    }
+}
