--- a/css/index.css
+++ b/css/index.css
@@ -160,6 +160,27 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  background-color: gainsboro;
+}
+.header h1 {
+  font-size: 3.5rem;
+  padding: 10px 10px;
+}
+.header .navigation {
+  padding: 10px;
+}
+.header .navigation a {
+  text-decoration: none;
+  padding: 15px;
+  color: black;
+  text-align: center;
+  font-size: 2rem;
+}
 footer {
   color: #22283B;
   background: #f4f4f4;
