Create parametric mixin for button and hover style

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -58,6 +58,13 @@
       }
 
       .btn {
+        .para-button(10px 10px, 10px, none, 15px, 1em, midnightblue, white, none);
+        width: 35%;
+        text-align: center;
+      }
+      .btn:hover {
+        color: midnightblue;
+        background-color: white;
       }
     }
 
@@ -73,3 +80,7 @@
     }
   }
 }// home
+
+.main-header {
+  border-radius: 10px;
+}
