--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,8 @@
+.flex-box {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -165,7 +170,7 @@ p {
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: gainsboro;
+  background-color: #f3f3f3;
 }
 .header h1 {
   font-size: 3.5rem;
@@ -233,6 +238,22 @@ footer {
 .home .walk .walk-text p {
   margin-bottom: 26px;
 }
+.home .walk .walk-text .btn {
+  padding: 10px 10px;
+  border-radius: 10px;
+  border: none;
+  font-size: 15px;
+  line-height: 1em;
+  background-color: midnightblue;
+  color: white;
+  text-align: none;
+  width: 35%;
+  text-align: center;
+}
+.home .walk .walk-text .btn:hover {
+  color: midnightblue;
+  background-color: white;
+}
 .home .walk .walk-img {
   width: 46%;
   margin-left: 4%;
@@ -240,5 +261,8 @@ footer {
 .home .walk .walk-img img {
   width: 100%;
   height: auto;
+  border-radius: 10px;
+}
+.main-header {
   border-radius: 10px;
 }
