--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,8 +3,9 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    //.flex-box();
     padding: 20px;
-    background-color: gainsboro;
+    background-color:lighten(gainsboro, 9%);
 
     h1 {
         font-size: 3.5rem;
