--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,3 @@
-.flex-box {
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-}
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -165,12 +160,25 @@ p {
   width: 100%;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  .container {
+    width: 100%;
+  }
+}
+body {
+  width: 100%;
+}
 .header {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
   background-color: #f3f3f3;
+}
+@media (max-width: 500px) {
+  .header {
+    width: 100%;
+  }
 }
 .header h1 {
   font-size: 3.5rem;
@@ -179,12 +187,27 @@ p {
 .header .navigation {
   padding: 10px;
 }
-.header .navigation a {
+@media (max-width: 500px) {
+  .header .navigation {
+    margin-top: unset;
+    text-align: center;
+  }
+}
+.navigation a {
   text-decoration: none;
   padding: 15px;
   color: black;
   text-align: center;
   font-size: 2rem;
+}
+@media (max-width: 500px) {
+  .navigation a {
+    padding: 5px;
+    font-size: 1rem;
+  }
+}
+.main-header {
+  width: 100%;
 }
 footer {
   color: #22283B;
@@ -213,8 +236,20 @@ footer {
   border-radius: 20px;
   height: 100%;
 }
+@media (max-width: 500px) {
+  .home .space-images img {
+    width: 100%;
+  }
+}
 .home .visit-planets {
   padding: 15px;
+}
+@media (max-width: 500px) {
+  .home .visit-planets {
+    flex-direction: column;
+    align-content: center;
+    width: 100%;
+  }
 }
 .home .visit-planets h3 {
   margin-top: 11px;
@@ -244,14 +279,19 @@ footer {
   border: none;
   font-size: 15px;
   line-height: 1em;
-  background-color: midnightblue;
+  background-color: #22283A;
   color: white;
   text-align: none;
   width: 35%;
   text-align: center;
 }
+@media (max-width: 500px) {
+  .home .walk .walk-text .btn {
+    width: 100%;
+  }
+}
 .home .walk .walk-text .btn:hover {
-  color: midnightblue;
+  color: #22283A;
   background-color: white;
 }
 .home .walk .walk-img {
@@ -265,4 +305,14 @@ footer {
 }
 .main-header {
   border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .sky {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .launch {
+    display: none;
+  }
 }
