--- a/less/global.less
+++ b/less/global.less
@@ -31,8 +31,13 @@ p {
 }
 
 .container {
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;  
+  .container-width();
+
+  @media @mobile {
+    width: 100%;
+  }
 }
 
+body {
+  width: 100%;
+}
