--- a/less/navigation.less
+++ b/less/navigation.less
@@ -3,9 +3,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    //.flex-box();
     padding: 20px;
     background-color:lighten(gainsboro, 9%);
+
+    @media @mobile {
+        width: 100%;
+    }
 
     h1 {
         font-size: 3.5rem;
@@ -13,6 +16,12 @@
     }
     .navigation {
         padding: 10px;
+
+            @media @mobile {
+                margin-top: unset;
+                text-align: center;
+            }
+        }
     }
     .navigation a {
         text-decoration: none;
@@ -20,5 +29,14 @@
         color: black;
         text-align: center;
         font-size: 2rem;
+
+        @media @mobile {
+            padding: 5px;
+            font-size: 1rem;
+        }
     }
+
+
+.main-header {
+    width: 100%
 }
