--- a/css/index.css
+++ b/css/index.css
@@ -298,6 +298,7 @@ footer {
   text-align: none;
   width: 35%;
   text-align: center;
+  transition: all 0.5s ease-out;
 }
 @media (max-width: 500px) {
   .home .walk .walk-text .btn {
