--- a/less/mixins.less
+++ b/less/mixins.less
@@ -19,6 +19,10 @@
 
 .container-width() {
     max-width: 800px;
-  width: 100%;
-  margin: 0 auto;  
+    width: 100%;
+    margin: 0 auto;  
+}
+
+.image-remove() {
+    display: none;
 }
